2010-10-18  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        CC authors of flaky tests when the commit-queue hits a flaky test
        https://bugs.webkit.org/show_bug.cgi?id=47872

        * Scripts/webkitpy/common/checkout/api.py:
        * Scripts/webkitpy/common/net/layouttestresults.py:
        * Scripts/webkitpy/tool/commands/queues.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:
        * Scripts/webkitpy/tool/mocktool.py:

2010-10-18  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Make it possible to run a chromium-mac-ews builder
        https://bugs.webkit.org/show_bug.cgi?id=47876

        Since we can't run Mac OS X in a VM, we need to only run committer patches.
        There was a multiple inheritance problem which was holding this patch back,
        but I decided to just ignore the problem and go with a functional hack for now.

        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:
        * Scripts/webkitpy/tool/commands/earlywarningsystem_unittest.py:

2010-10-18  Kenneth Russell  <kbr@google.com>

        Reviewed by Tony Chang.

        Regression in run_webkit_tests_unittest from r70017
        https://bugs.webkit.org/show_bug.cgi?id=47875

        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py:

2010-10-18  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Implement webkit-patch suggest-reviewers
        https://bugs.webkit.org/show_bug.cgi?id=47866

        * Scripts/webkitpy/common/checkout/api.py:
            - The main logic.  We look at the last five changes to each
              modified (non-ChangeLog) file and collect up the reviewers of
              those changes as well as the authors of those changes who are
              reviewers.
        * Scripts/webkitpy/common/checkout/api_unittest.py:
            - Test the logic with some fun mocks.
        * Scripts/webkitpy/common/checkout/scm.py: